--- a/index.html
+++ b/index.html
@@ -46,20 +46,26 @@
 <h3>
 <a id="motivation" class="anchor" href="#motivation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Motivation</h3>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<p>We wanted to find a moment in history with a lot of significance, which also has many misconceptions. We chose the Apollo moon landing to teach people the facts about the moon including, but not limited to, the lack of stars in the sky, the way the astronauts had to move, and the lack of sound on the moon.</p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<h3>
+<a id="technical-explanation" class="anchor" href="#technical-explanation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Technical Explanation</h3>
+
+<h3>
+<a id="game-screenshots" class="anchor" href="#game-screenshots" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Game Screenshots</h3>
+
+<h3>
+<a id="gameplay-video" class="anchor" href="#gameplay-video" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Gameplay Video</h3>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>Evan Amstutz (<a href="https://github.com/EvanMAmstutz" class="user-mention">@EvanMAmstutz</a>), Erian Vazquez (<a href="https://github.com/ErianVazquez" class="user-mention">@ErianVazquez</a>), and Patrick Poplowska (<a href="https://github.com/ppoplawska" class="user-mention">@ppoplawska</a>) worked on this project in Spring 2016 for the University of Florida's Virtual Reality class taught by Benjamin Lok.</p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="references" class="anchor" href="#references" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>References</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>We used some models from different developers in our experience. Those models are listed below.</p>
       </section>
 
     </div>
