--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
 <h3>
 <a id="technical-explanation" class="anchor" href="#technical-explanation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Technical Explanation</h3>
 
+<p>Our project consists of movement around the environment using a hopping motion for both the user's character and the AI character. The user's character hopping movement was created by manipulating the First Person Controller script so, as long as the user is grounded, a directional movement with the controller results in a hopping motion. For the AI character, the hopping motion was achieved by using Maximo to apply the animation to the AI asset. This was then exported to Unity where the animation was manipulated to include motion along the x-axis. </p>
+
+<p>The sample collection system was created using mesh colliders placed on the rock assets and making the user character asset a rigid body object. A collision with the rock asset triggers a __________________. </p>
+
 <h3>
 <a id="game-screenshots" class="anchor" href="#game-screenshots" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Game Screenshots</h3>
 
