--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   <body>
       <div id="header">
         <nav>
-          <li class="fork"><a href="https://github.com/EvanMAmstutz/VR-Project-2">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/EvanMAmstutz/VR-Project-2/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/EvanMAmstutz/VR-Project-2/tarball/master">TAR</a></li>
+          <li class="fork"><a href="https://github.com/EvanMAmstutz/The-Apollo-Experience">View On GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/EvanMAmstutz/The-Apollo-Experience/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/EvanMAmstutz/The-Apollo-Experience/tarball/master">TAR</a></li>
           <li class="title">DOWNLOADS</li>
         </nav>
       </div><!-- end header -->
@@ -53,7 +53,9 @@
 
 <p>Our project consists of movement around the environment using a hopping motion for both the user's character and the AI character. The user's character hopping movement was created by manipulating the First Person Controller script so, as long as the user is grounded, a directional movement with the controller results in a hopping motion. For the AI character, the hopping motion was achieved by using Maximo to apply the animation to the AI asset. This was then exported to Unity where the animation was manipulated to include motion along the x-axis. </p>
 
-<p>The sample collection system was created using mesh colliders placed on the rock assets and making the user character asset a rigid body object. A collision with the rock asset triggers a __________________. </p>
+<p>The sample collection system was created using mesh colliders placed on the rock assets and making the user character asset a rigid body object. A collision with the rock asset triggers an action which picks up the rock, destroying the asset and setting a boolean flag to true. When the sample is brought back to the lander asset, a collision is activated and the boolean flag is set to false. </p>
+
+<p>A picture can be taken by selecting the proper button on the controller, thus playing a camera click audio file. The final action is putting the American flag on the moon. This was done by exploiting the user being in first person and hiding the flag directly above the user's camera and turning off the mesh render associated with the flag asset. When the player gets within a certain range of the planting point, the mesh render is turned on and an animation is activated lowering the flag asset to the ground and detaching it from the parent, which is the First Person Controller.</p>
 
 <h3>
 <a id="game-screenshots" class="anchor" href="#game-screenshots" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Game Screenshots</h3>
