Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
 <h3>
 <a id="references" class="anchor" href="#references" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>References</h3>
 
-<p>We used some models from different developers in our experience. Those models are listed below.
-<a href="http://nasa3d.arc.nasa.gov/models">Lander and lunar astronaut suit</a></p>
+<p>We used some models from different developers in our experience. Those models are listed below.</p>
+
+<p><a href="http://nasa3d.arc.nasa.gov/models">Lander and lunar astronaut suit</a></p>
 
 <p><a href="https://www.assetstore.unity3d.com/en/#!/content/6947">Lunar rocks</a></p>
 
