--- a/index.html
+++ b/index.html
@@ -60,10 +60,20 @@
 <h3>
 <a id="gameplay-video" class="anchor" href="#gameplay-video" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Gameplay Video</h3>
 
+<p><a href="https://www.youtube.com/watch?v=nfgklIsOiCM&amp;feature=youtu.be">https://www.youtube.com/watch?v=nfgklIsOiCM&amp;feature=youtu.be</a></p>
+
+<h3>
+<a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Screenshots</h3>
+
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
 <p>Evan Amstutz (<a href="https://github.com/EvanMAmstutz" class="user-mention">@EvanMAmstutz</a>), Erian Vazquez (<a href="https://github.com/ErianVazquez" class="user-mention">@ErianVazquez</a>), and Patrick Poplowska (<a href="https://github.com/ppoplawska" class="user-mention">@ppoplawska</a>) worked on this project in Spring 2016 for the University of Florida's Virtual Reality class taught by Benjamin Lok.</p>
+
+<h3>
+<a id="link-to-download" class="anchor" href="#link-to-download" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Link to download</h3>
+
+<p><a href="https://drive.google.com/file/d/0B-GX2ZgQwvbHQ2Y1el8tYkxjSDg/view?usp=sharing">https://drive.google.com/file/d/0B-GX2ZgQwvbHQ2Y1el8tYkxjSDg/view?usp=sharing</a></p>
 
 <h3>
 <a id="references" class="anchor" href="#references" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>References</h3>
