--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
 <h3>
 <a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Screenshots</h3>
 
+<p><img src="http://imgur.com/sEzWcSx" alt="">
+<img src="http://imgur.com/nZE7UqX" alt=""></p>
+
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
