Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -65,13 +65,34 @@
 <h3>
 <a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Screenshots</h3>
 
-<p><img src="http://imgur.com/sEzWcSx" alt="">
-<img src="http://imgur.com/nZE7UqX" alt=""></p>
-
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
 <p>Evan Amstutz (<a href="https://github.com/EvanMAmstutz" class="user-mention">@EvanMAmstutz</a>), Erian Vazquez (<a href="https://github.com/ErianVazquez" class="user-mention">@ErianVazquez</a>), and Patrick Poplowska (<a href="https://github.com/ppoplawska" class="user-mention">@ppoplawska</a>) worked on this project in Spring 2016 for the University of Florida's Virtual Reality class taught by Benjamin Lok.</p>
+
+<h3>
+<a id="learning-objectives" class="anchor" href="#learning-objectives" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Learning Objectives</h3>
+
+<h1>
+<a id="strongly-agree--agree--undecided--disagree-strongly-disagree" class="anchor" href="#strongly-agree--agree--undecided--disagree-strongly-disagree" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Strongly Agree  Agree  Undecided  Disagree Strongly Disagree</h1>
+
+<pre><code>                          1       2              3                 4                       5
+             (BEFORE USAGE)
+</code></pre>
+
+<p>I have a good understanding of the quality of communication between the astronauts and NASA.
+I know how the astronauts had to move around the moon.
+I know how bright the sun is when Earth's atmosphere is not present.
+I understand why you cant see stars at the Apollo landing sites.</p>
+
+<p>QUESTION: Ask participant to give an example of the knowledge they already have around the learning objective.</p>
+
+<p>Prior to experience, the user had a rating of 2 on and understanding of the Apollo lunar landings.</p>
+
+<p>1) 5
+2) 5
+3) 5
+4) 5</p>
 
 <h3>
 <a id="link-to-download" class="anchor" href="#link-to-download" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Link to download</h3>
