--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
 <h3>
 <a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Screenshots</h3>
 
+<p><a href="http://imgur.com/sEzWcSx">http://imgur.com/sEzWcSx</a></p>
+
+<p><a href="http://imgur.com/nZE7UqX">http://imgur.com/nZE7UqX</a></p>
+
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
