Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -84,10 +84,13 @@
              (BEFORE USAGE)
 </code></pre>
 
-<p>I have a good understanding of the quality of communication between the astronauts and NASA.
-I know how the astronauts had to move around the moon.
-I know how bright the sun is when Earth's atmosphere is not present.
-I understand why you cant see stars at the Apollo landing sites.</p>
+<p>1) I have a good understanding of the quality of communication between the astronauts and NASA.</p>
+
+<p>2) I know how the astronauts had to move around the moon.</p>
+
+<p>3) I know how bright the sun is when Earth's atmosphere is not present.</p>
+
+<p>5) I understand why you cant see stars at the Apollo landing sites.</p>
 
 <p>QUESTION: Ask participant to give an example of the knowledge they already have around the learning objective.</p>
 
